Web Gateway/APP-Security-Group.tf
/*

resource "aws_security_group" "website_app"{
    name = "website_app"
    description = "Allow API Access"
    vpc_id = aws_vpc.main.id

    ingress{
        description = "Allow Health Checks"
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = [aws_vpc.main.cidr_block]
    }

    egress{
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}*/
